--- a/mp-admin/package.json
+++ b/mp-admin/package.json
@@ -11,7 +11,7 @@
         "test:e2e": "vue-cli-service test:e2e"
     },
     "dependencies": {
-        "@smallwei/avue": "^1.6.1",
+        "@smallwei/avue": "^2.0.2",
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "classlist-polyfill": "^1.2.0",
@@ -28,13 +28,13 @@
         "vue-axios": "^2.1.2",
         "vue-clipboard2": "^0.2.1",
         "vue-json-tree-view": "^2.1.4",
+        "vue-kindeditor": "^0.3.1",
+        "vue-moment": "^4.0.0",
         "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.0.1",
         "vuedraggable": "^2.16.0",
         "vuex": "^3.0.1",
-        "xlsx": "^0.13.3",
-        "vue-kindeditor": "^0.3.1",
-        "vue-moment": "^4.0.0"
+        "xlsx": "^0.13.3"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.1.1",
