--- a/mp-admin-api/src/main/resources/application.yml
+++ b/mp-admin-api/src/main/resources/application.yml
@@ -1,42 +1,3 @@
 spring:
-  datasource:
-          name: mpstore
-          # url: jdbc:mysql://182.61.166.15:3306/test?useUnicode=true&characterEncoding=UTF8
-          url: jdbc:mysql://localhost:3306/htshop?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-          username: db_mpstore
-          password: db_mpstore
-          driver-class-name: com.mysql.cj.jdbc.Driver
-  jackson:
-    time-zone: GMT+8
-    serialization:
-      write-dates-as-timestamps: true
-  http:
-    encoding:
-      charset: UTF-8
-      enabled: true
-      force: true
-server:
-  port: 9999
-  servlet:
-    context-path:
-  tomcat:
-    uri-encoding: UTF-8
-mpstore:
-  service-url: http://localhost:${server.port}${server.servlet.context-path}
-  file:
-     upload-path: D:/upload
-  defaultPassword: 123456
-  aesKey: 1234567890123456
-jwt:
-  header: Authorization
-  secret: mpstore
-  expiration: 604800
-
-logging:
-  level:
-    root: debug
-    org.springframework.web: debug
-    org.hibernate: error
-    com.julong.cloud: debug
-mybatis-plus:
- mapper-locations: classpath:/mapper/*Mapper.xml
+  profiles:
+    active: @package.environment@
