--- a/mp-api/src/main/resources/application-prod.yml
+++ b/mp-api/src/main/resources/application-prod.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
           name: htshop
           # url: jdbc:mysql://182.61.166.15:3306/test?useUnicode=true&characterEncoding=UTF8
-          url: jdbc:mysql://localhost:3306/htshop?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-          username: db_mpstore
-          password: db_mpstore
+          url: jdbc:mysql://118.25.132.139:3306/htshop?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+          username: root
+          password: Qq@13842823735
           driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
     time-zone: GMT+8
@@ -16,27 +16,27 @@ spring:
       enabled: true
       force: true
 server:
-  port: 9999
+  port: 8888
   servlet:
     context-path:
   tomcat:
     uri-encoding: UTF-8
 mpstore:
-  service-url: http://localhost:${server.port}${server.servlet.context-path}
+  service-url: http://www.ganjinnuo.com
   file:
-     upload-path: D:/upload
+     upload-path: /var/data/upload
   defaultPassword: 123456
   aesKey: 1234567890123456
 jwt:
   header: Authorization
-  secret: mpadmin
+  secret: mpapi
   expiration: 604800
 
 logging:
   level:
-    root: debug
-    org.springframework.web: debug
+    root: error
+    org.springframework.web: error
     org.hibernate: error
-    com.julong.cloud: debug
+    com.julong.cloud: error
 mybatis-plus:
  mapper-locations: classpath:/mapper/*Mapper.xml
