--- a/mp-api/pom.xml
+++ b/mp-api/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.kulongtai.mpstore</groupId>
 	<artifactId>mp-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>mp-api</name>
 	<description>微信小程序api</description>
 
@@ -150,7 +150,25 @@
 		</dependency>
 
 	</dependencies>
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<package.environment>dev</package.environment>
+			</properties>
+			<!-- 是否默认 true表示默认-->
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
 
+		<profile>
+			<id>prod</id>
+			<properties>
+				<package.environment>prod</package.environment>
+			</properties>
+		</profile>
+	</profiles>
 	<build>
 		<plugins>
 			<plugin>
